# github

./: .cursorignore  .gitignore  CI_AUDIT_TEST.md  CONTRIBUTING.md  LICENSE  README.md  README_MERGLBOT_IMPLEMENTATION.md  README_WARP_IMPLEMENTATION.md  SECURITY.md  TEST_MERGLBOT_CANONICAL.md  TEST_PR_ASSISTANT.md  WORKFLOWS.md  bot_comments.json  pr_comment.md  pr_comments.txt  pr_diff.txt  test-claude-assistant-demo.md
.gemini/: styleguide.md
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml  pr-assistant-v4-canary.json  pr-assistant-v4-fleet-wave1-canary-20260429T121144Z.md  synth-fix-canary-20260429T193120Z.md
.merglbot-canary/: pr-assistant-v4-stg-canary-20260427.md
bot-configs/: .cursorbot  .cursorrules  copilot-config.yml
config/: expected-org-settings.json  ssot-map.snapshot.json
dashboard/: .dockerignore  Dockerfile  README.md  docker-entrypoint.sh  (+5 more)
platform/tools/cost-monitoring/: README.md  pyproject.toml
platform/tools/cost-monitoring/config/: settings.example.yml  thresholds.example.yml
platform/tools/cost-monitoring/cost_monitoring/: __init__.py  ai_usage_alerts.py  cli.py
platform/tools/cost-monitoring/cost_monitoring/alerting/: __init__.py  notifiers.py  thresholds.py
platform/tools/cost-monitoring/cost_monitoring/monitor/: __init__.py  gcp_monitor.py  github_monitor.py
platform/tools/cost-monitoring/cost_monitoring/report/: __init__.py  writers.py
platform/tools/cost-monitoring/cost_monitoring/utils/: __init__.py  anomaly_config.py
platform/tools/cost-monitoring/tests/: test_ai_usage_alerts.py  test_anomaly_config.py
(+382 files in other folders)
